--- a/index.html
+++ b/index.html
@@ -24,16 +24,23 @@
     <p>Informatyka Stosowana</p>
     <div id="plan">
         <div class="zajecie d-none">
-            <div>
+            <p>
                 <span class="dzien">Sb</span>
                 <span class="termin">termin</span>
                 <span class="typ">typ</span>
-            </div>
-            <div>
+            </p>
+            <p>
                 <span class="przedmiot">nazwa</span>
-            </div>
-            <div>
+            </p>
+            <p>
+                <span>
+                    <span class="od-godz">od</span> - <span class="do-godz">do</span>
+                </span>
                 <span class="sala">sala</span>
+            </p>
+            <div class="info">
+                <p>KOLOKWIUM</p>
+                <p class="zakres"></p>
             </div>
         </div>
     </div>
